--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "postcss ./src/css/tailwind.css -o ./public/build/tailwind.css --watch",
-    "build": "postcss ./src/css/tailwind.css -o ./public/build/tailwind.css"
+    "dev": " npx postcss ./src/css/tailwind.css -o ./public/build/tailwind.css --watch",
+    "build": "npx postcss ./src/css/tailwind.css -o ./public/build/tailwind.css"
   },
   "keywords": [],
   "author": "",
